test/razor.test.views/errors/partialViewNotFound.jshtml
<h1>partialViewNotFound.jshtml</h1>
<div>
    <!--[#2.3]-->
    @Html.partial("./_partial.jshtml")
</div>